[gd_scene load_steps=10 format=3 uid="uid://ckllwiyuh58bq"]

[ext_resource type="Script" uid="uid://conygbyl8ab4g" path="res://chat.gd" id="1_rgma2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfj5t"]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfj5t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58kua"]
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b56jl"]
bg_color = Color(0, 0, 0, 0.3137255)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i812h"]
content_margin_left = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nopgj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swcnr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2lvr1"]

[node name="Chat" type="Control"]
custom_minimum_size = Vector2(320, 200)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_rgma2")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(320, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="systemLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.9254902, 0.43137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/paragraph_separation = -3
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_nfj5t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nfj5t")
bbcode_enabled = true
scroll_following = true
autowrap_mode = 1

[node name="chatLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/paragraph_separation = -3
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_58kua")
bbcode_enabled = true
scroll_following = true
autowrap_mode = 1
vertical_alignment = 2

[node name="inputPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_b56jl")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/inputPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2

[node name="channelLabel" type="Label" parent="MarginContainer/VBoxContainer/inputPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(61, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_i812h")
vertical_alignment = 1

[node name="inputField" type="LineEdit" parent="MarginContainer/VBoxContainer/inputPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxEmpty_nopgj")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_swcnr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2lvr1")
max_length = 95
keep_editing_on_text_submit = true
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
caret_blink_interval = 0.3
